# hypergraph-partitioner

./: .gitignore  Cargo.toml  FULL_RESULTS.md  LICENSE  README.md  bench_10000.sh  bench_100000.sh  bench_20000.sh  bench_200000.sh  bench_50000.sh  bench_all.sh  build.rs
kernels/: solver.cu  solver.cu.bak
src/: cuda.rs  hgr.rs  lib.rs  main.rs
src/solver/: mod.rs
tools/: compare_kahypar.py  compare_results.py  eval_partitions.py  run_kahypar.py
