[package]
name = "hg_bench"
version = "0.1.0"
edition = "2021"
authors = ["rootztigmod"]
description = "GPU-accelerated hypergraph partitioner - benchmarking against Mt-KaHyPar"
license = "MIT"
repository = "https://github.com/rootztigmod/hypergraph-partitioner"

[[bin]]
name = "hg_bench"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cudarc = { git = "https://github.com/tig-foundation/cudarc.git", branch = "runtime-fuel/cudnn-cublas", features = [
    "cuda-version-from-build-system",
] }

tig-challenges = { git = "https://github.com/tig-foundation/tig-monorepo.git", branch = "blank_slate", features = [
    "hypergraph",
] }

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
